# projup

./: .gitignore  CMakeLists.txt  README.md  install.sh
include/: utils.h
source/: main.cpp  utils.cpp
templates/cpp-example/: CMakeLists.txt  projup
